--- a/tests/charge/docker-compose.yaml
+++ b/tests/charge/docker-compose.yaml
@@ -6,9 +6,9 @@ services:
       POSTGRES_DB: "payservice-db"
       POSTGRES_USER: "payservice"
       POSTGRES_PASSWORD: "payservice"
-    #      PGDATA: "/var/lib/postgresql/data/pgdata"
-    volumes:
-      - .:/var/lib/postgresql/data
+#      PGDATA: "/var/lib/postgresql/data/pgdata"
+#    volumes:
+#      - ./pgdata/:/var/lib/postgresql/data
     ports:
       - "5432:5432"
   vault:
