--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
 version: "3.9"
-services:
 
+networks:
+  app-net-1:
+    external: true
+
+services:
   pay:
     image: pay-service
     build:
@@ -13,6 +17,8 @@ services:
       - .env
     depends_on:
       postgres:
+        condition: service_healthy
+      jaeger:
         condition: service_healthy
     ports:
       - "50051:50051"
@@ -38,6 +44,26 @@ services:
       timeout: 5s
       retries: 5
 
-networks:
-  app-net-1:
-    external: true
+  jaeger:
+    image: jaegertracing/all-in-one:1.35
+    environment:
+      COLLECTOR_ZIPKIN_HOST_PORT: ":9411"
+      COLLECTOR_OTLP_ENABLED: true
+    ports:
+      - "6831:6831/udp"
+      - "6832:6832/udp"
+      - "5778:5778"
+      - "16686:16686"
+      - "4317:4317"
+      - "4318:4318"
+      - "14250:14250"
+      - "14268:14268"
+      - "14269:14269"
+      - "9411:9411"
+    healthcheck:
+      test: ["CMD","wget","-O-","localhost:14269"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    networks:
+      - app-net-1
