--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 /.env
 /.bin
-/.idea
 /.terminals
 /.idea/
+/.idea/dataSources/ea00ae1b-0928-43f8-982a-796f6d4064cc/storage_v2/_src_/
+/.idea/dataSources/ea00ae1b-0928-43f8-982a-796f6d4064cc/storage_v2/
+/.idea/dataSources/
